Improvements in error messages.

--- a/_layout/error.html
+++ b/_layout/error.html
@@ -32,15 +32,9 @@
 	#footer ul li.first-item a{padding-left:0}
 	#header p{font-size:13px;position:absolute;top:40px;right:0}
 	#header p a{color:#000;text-decoration:none;border-left:1px solid #ccc;padding-left:10px;margin-left:5px}
-	#sub-header{width:590px;min-height:230px;border-bottom:1px solid #ccc;margin:0 auto;padding:0 410px 35px 0}
+	#sub-header{width:590px;min-height:333px;margin:0 auto;padding:0 410px 35px 0}
 	#sub-header h2{font-family:Arial,Helvetica, sans-serif;font-size:40px;font-weight:700;margin-bottom:12px}
 	#sub-header p{font-size:16px;line-height:1.6;margin-bottom:15px}
-	#content{width:1000px;margin:0 auto}
-	#content h1{font-family:Arial,Helvetica, sans-serif;font-size:40px;font-weight:700;margin-bottom:1em;margin-top:0}
-	#content h2{font-size:18px;font-weight:700;text-transform:uppercase;border-bottom:1px solid #ccc;margin:1em 0;padding:0}
-	#content h3{font-size:14px;font-weight:700;text-transform:uppercase;margin:.3em 0}
-	#content a{text-decoration:underline;color:#000}
-	#content a:hover {text-decoration:none;color:#000}
 	#header ul a{text-decoration:none}
 	#header ul li a.active,#footer ul li a.active,#sub-header p strong,#footer .custom strong,#content strong,#content dt,.code a.cd_name{font-weight:700}
 	#sub-header p.continue,#services li p.continue{margin-bottom:0}
@@ -48,15 +42,9 @@
 	#footer p a:hover {text-decoration:underline}
 	#sub-header p.continue a:hover,#services li p.continue a:hover,#footer ul li a:hover,#footer .custom a:hover,#header ul a:hover,#sidebar ul a:hover,#submenu li a:hover{text-decoration:underline}
 	h3 a,.code ul li a,.code a,.paper a{text-decoration:none!important}
-	#content p,#content ol,.product{margin:1em 0}
-	.small{font-size:small}
+	.small{margin-top:2em;font-size:small}
 	.clear{clear:both}
 	.hide{display:none!important}
-	#content em{font-style:italic}
-	#content dd{padding-left:5px}
-	#content ul{margin-left:1em;padding-left:0}
-	#content ul#services{list-style:none}
-	#content li{margin-left:1em;padding-top:.5em!important}
 	#header ul li a.active,#footer ul li a.active,#sub-header p strong,#footer .custom strong,#content strong,#content dt,.code a.cd_name{font-weight:700}
 	#sub-header p.continue,#services li p.continue{margin-bottom:0}
 	#footer p a{text-decoration:none;color:#000}
