--- a/styles/main_uncompressed.css
+++ b/styles/main_uncompressed.css
@@ -26,7 +26,7 @@ body{font-family:"Bitstream Vera Sans",Arial,Helvetica,sans-serif;background:#ff
 acronym{border-bottom:1px dotted #000}
 .center{text-align:center;margin 0 auto}
 .collapse{height:0}
-#header{width:1000px;height:118px;position:relative;border-bottom:1px solid #ccc;margin:0 auto 35px}
+#header{width:75%;height:118px;position:relative;border-bottom:1px solid #ccc;margin:0 auto 35px}
 #header h1{font-family:GeoSans, Arial, Helvetica, sans-serif;padding-top:38px;font-weight:400}
 #header h1 a{display:block;text-decoration:none;font-size:23px;color:#000;text-transform:uppercase;width:190px;padding:18px}
 #header h1 a strong{color:#666}
@@ -37,7 +37,7 @@ acronym{border-bottom:1px dotted #000}
 #footer ul li.first-item a{padding-left:0}
 #header p{font-size:13px;position:absolute;top:40px;right:0}
 #header p a{color:#000;text-decoration:none;border-left:1px solid #ccc;padding-left:10px;margin-left:5px}
-#sub-header{width:590px;border-bottom:1px solid #ccc;margin:0 auto;padding:0 410px 35px 0}
+#sub-header{width:45%;border-bottom:1px solid #ccc;margin:0 auto;padding:0 410px 1em 0}
 .main-header{background:url(../images/layout/sub_header.jpg) top right no-repeat}
 .planet-header{background:url(../images/layout/teamug.jpg) top right no-repeat}
 .about-header{background:url(../images/layout/box.jpg) top right no-repeat}
@@ -54,8 +54,8 @@ acronym{border-bottom:1px dotted #000}
 p.continue a{color:#000;font-style:italic !important;text-decoration:none !important}
 p.continue a:before {content:'\2192';font-size:20px !important}
 p.continue a:hover {text-decoration:underline !important}
-#content{width:1000px;margin:0 auto}
-#main-content{width:615px;float:left;padding:25px 0 0}
+#content{width:75%;margin:0 auto}
+#main-content{float:left;padding:25px 0 0}
 #content > ul#services{margin-top:25px}
 #services li{float:left;width:270px;margin:0 60px 30px 0}
 #services li.last-row-item{margin-right:0}
