--- a/_layout/default.html
+++ b/_layout/default.html
@@ -11,7 +11,7 @@
 <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
 <script src="/scripts/tipsy.js" type="text/javascript"></script>
-<script type="text/javascript">$(function(){ $(".icon").tipsy({"gravity":"s","fade":true}); });</script>
+<script type="text/javascript">$(function(){ $(".icon, acronym").tipsy({"gravity":"s","fade":true}); });</script>
 {% block htmlhead %}{% endblock %}
 </head>
 <body>
