--- a/styles/main_uncompressed.css
+++ b/styles/main_uncompressed.css
@@ -174,6 +174,7 @@ td{padding: 9px 8px 0px 8px;color:#333}
 .serv_saving{background:#fff url(../images/services/saving.jpg) 0 0 no-repeat}
 .serv_talks{background:#fff url(../images/services/talks.jpg) 0 0 no-repeat}
 .serv_torrent{background:#fff url(../images/services/torrent.jpg) 0 0 no-repeat}
+.serv_time{background:#fff url(../images/services/time.jpg) 0 0 no-repeat}
 .about_history{background:#fff url(../images/about/history.jpg) 0 0 no-repeat}
 .about_people{background:#fff url(../images/about/people.jpg) 0 0 no-repeat}
 .about_core{background:#fff url(../images/about/core.jpg) 0 0 no-repeat}
