Adding security area.

--- a/styles/main_uncompressed.css
+++ b/styles/main_uncompressed.css
@@ -164,6 +164,7 @@ td{padding: 9px 8px 0px 8px;color:#333}
 .area_embedded{background:#fff url(../images/innovation/embedded.jpg) 0 0 no-repeat}
 .area_cloud{background:#fff url(../images/innovation/cloud.jpg) 0 0 no-repeat}
 .area_social{background:#fff url(../images/innovation/social.jpg) 0 0 no-repeat}
+.area_security{background:#fff url(../images/innovation/security.jpg) 0 0 no-repeat}
 .area .author .chair{color:#000}
 .area .more ul{list-style:square;margin:1% 5% !important}
 .area .more ul li{margin-top:0.5em}
