--- a/styles/main_uncompressed.css
+++ b/styles/main_uncompressed.css
@@ -106,7 +106,7 @@ p.continue a:hover {text-decoration:underline !important}
 ol.arabic{list-style:decimal}
 .toctree-l2{padding-left:1em!important}
 .toctree-l3{padding-left:2em!important}
-#otweet{font-size:small;border-radius:5px;min-height:2.5em;position:relative;color:#000;margin:0;padding:0}
+#otweet{font-size:small;;min-height:2.5em;width:70%!important;position:relative;color:#000;margin:0;padding:0}
 .smallpic{width:40px;height:40px;float:left;margin-right:10px}
 .gravatar{-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;height:40px;width:40px;background:#ccc}
 .person{margin-top:0.5em;padding:0}
