Site icons changed. - Use fancy vector icons from 	http://icondock.com/free/vector-social-media-icons - G+ link and site icon added

--- a/_layout/default.html
+++ b/_layout/default.html
@@ -47,6 +47,7 @@
 	  <a title="Follow us in twitter" class="icon icon_twitter" href="http://twitter.com/connectical"><span class="hide">twitter</span></a>
 	  <a title="Follow us in identi.ca" class="icon icon_identica" href="http://identi.ca/group/connectical"><span class="hide">identi.ca</span></a>
 	  <a title="Follow us in facebook" class="icon icon_facebook" href="http://l.connectical.com/facebook"><span class="hide">facebook</span></a>
+	  <a title="Follow us in google+" class="icon icon_googleplus" href="https://plus.google.com/112539764208188646949"><span class="hide">google+</span></a>
   </p>
 </div>
 <!-- //#footer -->
