--- a/styles/main_uncompressed.css
+++ b/styles/main_uncompressed.css
@@ -201,9 +201,10 @@ p.custom{margin:0!important}
 p.custom a{padding:0!important;border:0!important}
 .custom .icon,.text .icon{display:block;float:left;width:24px;height:24px}
 .text .icon{display:inline!important;float:right!important}
-.icon_twitter{background:#fff url(../images/sicons.png) 0 0 no-repeat}
-.icon_identica{background:#fff url(../images/sicons.png) 0 -24px no-repeat}
-.icon_facebook{background:#fff url(../images/sicons.png) 0 -48px no-repeat}
-.icon_linkedin{background:#fff url(../images/sicons.png) 0 -72px no-repeat}
-.icon_diigo{background:#fff url(../images/sicons.gif) 0 -96px no-repeat}
+.icon_diigo{background:#fff url(../images/sicons.gif) 0 0 no-repeat}
+.icon_facebook{background:#fff url(../images/sicons.png) 0 -24px no-repeat}
+.icon_googleplus{background:#fff url(../images/sicons.png) 0 -48px no-repeat}
+.icon_identica{background:#fff url(../images/sicons.png) 0 -72px no-repeat}
+.icon_linkedin{background:#fff url(../images/sicons.png) 0 -96px no-repeat}
+.icon_twitter{background:#fff url(../images/sicons.png) 0 -120px no-repeat}
 .area input{display:inline !important;margin-left:1em;border:1px solid #aaa;border-radius:3px;color:#000}
