--- a/_layout/default.html
+++ b/_layout/default.html
@@ -52,20 +52,20 @@
 </div>
 <!-- //#footer -->
 <div id="tracking">
+<!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
-var clicky_site_ids = clicky_site_ids || [];
-clicky_site_ids.push(66493797);
-(function() {
-  var s = document.createElement('script');
-  s.type = 'text/javascript';
-  s.async = true;
-  s.src = '//static.getclicky.com/js';
-  ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
-})();
+var sc_project=8120696; 
+var sc_invisible=1; 
+var sc_security="79f32036"; 
 </script>
-<noscript>
-<p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66493797ns.gif" /></p></noscript>
-
+<script type="text/javascript"
+src="http://www.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="tumblr page
+counter" href="http://statcounter.com/tumblr/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/8120696/0/79f32036/1/"
+alt="tumblr page counter"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 </div>
 </body>
 </html>
