--- a/styles/main_uncompressed.css
+++ b/styles/main_uncompressed.css
@@ -52,15 +52,13 @@ acronym{border-bottom:1px dotted #000}
 #sub-header{width:75%;border-bottom:1px solid #ccc;margin:0 auto;padding:0 0 1em 0;min-height:200px}
 #sub-header h2,#sub-header p{width:55%}
 .main-header{background:url(../images/layout/sub_header.jpg) top right no-repeat}
-.planet-header{background:url(../images/layout/teamug.jpg) top right no-repeat}
-.about-header{background:url(../images/layout/box.jpg) top right no-repeat}
+.planet-header{background:url(../images/layout/news.jpg) top right no-repeat}
+.about-header{background:url(../images/layout/puppet.jpg) top right no-repeat}
 .join-header{background:url(../images/layout/plug.jpg) top right no-repeat}
-.services-header{background:url(../images/layout/opener.jpg) top right no-repeat}
+.services-header{background:url(../images/layout/corks.jpg) top right no-repeat}
 .services-lists-header{background:url(../images/layout/boxpost.jpg) top right no-repeat}
-.services-confs-header{background:url(../images/layout/clip.jpg) top right no-repeat}
 .core-header{background:url(../images/layout/block.jpg) top right no-repeat}
-.services-websaving-header{background:url(../images/layout/woodbox.jpg) top right no-repeat}
-.innovation-header{background:url(../images/layout/train.jpg) top right no-repeat}
+.innovation-header{background:url(../images/layout/bulb.jpg) top right no-repeat}
 .products-header{background:url(../images/layout/tin.jpg) top right no-repeat}
 #sub-header h2{font-family:GeoSans, Arial, Helvetica, sans-serif;font-size:40px;font-weight:100;margin-bottom:12px}
 #sub-header p{font-size:16px;line-height:1.6;margin-bottom:15px}
@@ -184,7 +182,6 @@ td{padding: 9px 8px 0px 8px;color:#333}
 .area .more ul li a:hover {text-decoration:underline !important}
 .article {color:#000;font-size:small}
 .serv_mailing{background:#fff url(../images/services/mailing.jpg) 0 0 no-repeat}
-.serv_saving{background:#fff url(../images/services/saving.jpg) 0 0 no-repeat}
 .serv_talks{background:#fff url(../images/services/talks.jpg) 0 0 no-repeat}
 .serv_torrent{background:#fff url(../images/services/torrent.jpg) 0 0 no-repeat}
 .serv_time{background:#fff url(../images/services/time.jpg) 0 0 no-repeat}
