--- a/styles/main_uncompressed.css
+++ b/styles/main_uncompressed.css
@@ -34,7 +34,7 @@ fieldset,img,abbr,acronym{border:0}
 .tipsy-se .tipsy-arrow{bottom:0;right:10px;background-position:bottom left}
 .tipsy-e .tipsy-arrow{top:50%;margin-top:-4px;right:0;width:5px;height:9px;background-position:top right}
 .tipsy-w .tipsy-arrow{top:50%;margin-top:-4px;left:0;width:5px;height:9px}
-body{font-family:"Bitstream Vera Sans",Helvetica,Arial,Verdana,sans-serif;background:#fff url(data:image/jpeg;base64,/9j/4AAQSkZJRgABAQIAHAAcAAD/2wBDAAMCAgICAgMCAgIDAwMDBAYEBAQEBAgGBgUGCQgKCgkICQkKDA8MCgsOCwkJDRENDg8QEBEQCgwSExIQEw8QEBD/wAALCADIAAUBAREA/8QAFwABAQEBAAAAAAAAAAAAAAAAAwACCf/EABsQAQEAAgMBAAAAAAAAAAAAAAASAQIRMWFB/9oACAEBAAA/AOi8kks8/CSWSSWSxz2SfCSXGvhM65LPhM6tJJJJJP/Z) 0 0 repeat-x}
+body{font-family:"Arial Black", Gadget, sans-serif;font-size:14pt;background:#fff url(data:image/jpeg;base64,/9j/4AAQSkZJRgABAQIAHAAcAAD/2wBDAAMCAgICAgMCAgIDAwMDBAYEBAQEBAgGBgUGCQgKCgkICQkKDA8MCgsOCwkJDRENDg8QEBEQCgwSExIQEw8QEBD/wAALCADIAAUBAREA/8QAFwABAQEBAAAAAAAAAAAAAAAAAwACCf/EABsQAQEAAgMBAAAAAAAAAAAAAAASAQIRMWFB/9oACAEBAAA/AOi8kks8/CSWSSWSxz2SfCSXGvhM65LPhM6tJJJJJP/Z) 0 0 repeat-x}
 acronym{border-bottom:1px dotted #000}
 .center{text-align:center;margin 0 auto}
 .collapse{height:0}
@@ -47,7 +47,7 @@ acronym{border-bottom:1px dotted #000}
 #header ul li a,#footer ul li a,#submenu li a{display:block;float:left;font-size:x-small;color:#000;text-decoration:none;text-transform:uppercase;border-right:1px solid #ccc;padding:0 15px}
 #header ul li.last-item a,#submenu li.last-item a{padding-right:0;border:none}
 #footer ul li.first-item a{padding-left:0}
-#header p{font-size:13px;position:absolute;top:40px;right:0}
+#header p{font-size:14px;position:absolute;top:40px;right:0}
 #header p a{color:#000;text-decoration:none;border-left:1px solid #ccc;padding-left:10px;margin-left:5px}
 #sub-header{width:75%;border-bottom:1px solid #ccc;margin:0 auto;padding:0 0 1em 0;min-height:200px}
 #sub-header h2,#sub-header p{width:55%}
@@ -139,7 +139,7 @@ table.docutils em{font-weight:700;color:#000}
 .tiny{font-size:x-small}
 .loading{background:#fff url(../images/icons/loading.gif) 50% 50% no-repeat;min-height:32px;min-width:32px}
 .area .author{margin-top:-.5em!important;font-size:x-small;color:#333!important}
-.area .desc{font-size:small;margin-top:1em}
+.area .desc{margin:1em 0 1em 0}
 .area p {text-align:justify;}
 #header ul li a.active,#footer ul li a.active,#sub-header p strong,#footer .custom strong,#content strong,#content dt,.code a.cd_name{font-weight:700}
 #sub-header p.continue,#services li p.continue{margin-bottom:0}
